[package]
name = "cal_test"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["JLer <jlerxky@live.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
common_x = { version = "0.3", default-features = false, features = [
    "config",
    "log",
] }
flume = "0.11"
indicatif = "0.17"
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"

[profile.release.package."*"]
debug = 0

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
